added required JavaFX to build.gradle